[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
authors = [
    {name = "gfredes-"},
    {email = "gfredes-@student.42malaga.com"},
]
version = "0.0.1"
description = "A sample test package"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

[project.urls]
Homepage = "https://github.com/kerowam/ft_package"

[tool.setuptools.packages.find]
include = ["ft_package*"]
